project(net-transfer)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "-Wall -g")
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
if(build_type STREQUAL "test")
	#test
	message("build type:test")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/test)
	add_executable(tranServerTest test/tranServerTest.cpp src/tranServer.cpp src/tcpServer.cpp)
elseif(type EQUAL debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/debug)
elseif(type EQUAL realse)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/realse)
endif()
